# swesat_nlu

./: .gitignore  README.md  merged_benchmark.jsonl  pyproject.toml
exams/2021-03-13/: facit-hp-2021-03-13.json  provpass-3-kvant_norm.json  provpass-5-kvant_norm.json
exams/2022-05-07/: facit-hp-2022-05-07.json  provpass-1-kvant_norm.json  provpass-4-kvant_norm.json
exams/2024-10-20/: facit-hp-2024-10-20.json  provpass-1-kvant_norm.json  provpass-4-kvant_norm.json
exams/2025-05-04/: facit-hp-2025-10-25.json  provpass-3-kvant_norm.json  provpass-5-kvant_norm.json
exams/2025-10-19/: facit-hp-2025-10-19.json  provpass-1-kvant_norm.json  provpass-4-kvant_norm.json
process_verbal_sections/: get_pdfs.py  parse_exam_pdf.py  verbal_utils.py
scripts/: add_superlim.py  compare_benchmarks.py  evaluate_minilingua.py  merge_benchmarks.py  upload_to_hf.py
