[project]
name = "swesat"
version = "0.1.0"
description = ""
authors = [{name = "Shorouq", email = "shorouq.zahra@ri.se"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pdfplumber>=0.11.5",
    "requests>=2.32.4",
    "datasets>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["process_verbal_sections"]
